CSS bug where options would have a short background color on small windows

--- a/stylesheets/tab.scss
+++ b/stylesheets/tab.scss
@@ -1,5 +1,5 @@
 html{
-  height: 100%;
+  min-height: 100%;
 }
 
 body{
